--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "ethers": "^6.9.1",
     "framer-motion": "^10.16.16",
     "next": "^13",
+    "primeflex": "^3.3.1",
+    "primeicons": "^6.0.1",
     "primereact": "^10.2.1",
     "react": "^18.2",
     "react-dom": "^18.2",
